Finally fix the issue where the Criteria row would wrap and I had no idea why - I wasn't importing the CSS document properly, so that when I changed styles, it didn't do anything. I thought a parent was overriding it, but I just missed the import due to poor highlight controls

--- a/src/components/ui/criteriaSelectionRow/CriteriaSelectionRow.module.css
+++ b/src/components/ui/criteriaSelectionRow/CriteriaSelectionRow.module.css
@@ -1,9 +1,8 @@
 /* CriteriaSelectionRow.module.css */
-.CriteriaSelectionRow {
+.criteriaSelectionRow {
   width: 100%;
   display: flex;
   align-items: center;
   gap: 10px;
   margin-top: 10px;
-  
 }
